[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Images/Spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Tile.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/Grass.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=1]
resource_name = "Dig"
length = 0.06
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=2]
resource_name = "Gem Found"
tracks/0/type = "value"
tracks/0/path = NodePath("PowerupSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 26.1841, 25.8159 )

[node name="Tile" type="Node2D" groups=[
"Tiles",
]]
z_index = 9
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="PowerupSprite" type="Sprite" parent="."]
scale = Vector2( 0.02, 0.02 )
z_index = 50
region_rect = Rect2( 0, 0, 16, 16 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 6 )

[node name="TextureProgress" type="TextureProgress" parent="."]
visible = false
modulate = Color( 0, 1, 0, 1 )
margin_left = -6.0
margin_top = -11.0
margin_right = 6.0
margin_bottom = -9.0
value = 100.0
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Dig = SubResource( 1 )
"anims/Gem Found" = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Discover Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Discover Area"]
shape = SubResource( 5 )

[node name="Health Watch" type="Timer" parent="."]
wait_time = 0.1
autostart = true
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="mouse_entered" from="Discover Area" to="." method="_on_Discover_Area_mouse_entered"]
[connection signal="mouse_exited" from="Discover Area" to="." method="_on_Discover_Area_mouse_exited"]
[connection signal="timeout" from="Health Watch" to="." method="_on_Health_Watch_timeout"]
